# HabaCoin

./: .gitignore  Cargo.toml  README.md  hardhat.config.ts  index.html  manifest.json  moderation.ts  netlify.toml  package.json  sw.js
.github/workflows/: deploy.yml  main.yml
contracts/: HabaArena.sol  HabaCore.sol  HabaFoundingNFT.sol  HabaSPow.sol  HabaToken.sol
miner-client/: Cargo.toml
miner-client/src/: lib.rs  main.rs  momentum.rs
netlify/edge-functions/: currency-sync.ts  get-haba-value.ts  get-user-currency.ts  ghost-config.ts  haba-handler.ts  identity-handler.ts  identity-signup.ts  link-wallet.ts  live-sync.ts  ptc-reward.ts  resolve-game.ts  sync-assets.ts  verify-spow.ts  verify-trip.ts
netlify/functions/: activate-hotspot.ts  identity-signup.ts  sync-mesh.ts  verify-movement.ts  verify-sudoku.ts
public/: manifest.json  matrix-login.js  sw.js
scripts/: deploy.ts
src/app/: App.tsx  manifest.ts  page.tsx
src/components/: AdminEnergyPanel.tsx  AdminHeader.tsx  AdminMinerMonitor.tsx  CarbonDashboard.tsx  ChessArena.tsx  CurrencySwitcher.tsx  EarlyBirdBanner.tsx  GamePavilion.tsx  GenesisCertificate.tsx  GhostChat.tsx  GhostRadar.tsx  GlobalLeaderboard.tsx  HabaChallenge.tsx  HabaMap.tsx  HabaSend.tsx  HustleLedger.tsx  HustleLog.tsx  HustleSummary.tsx  HustleTerminal.tsx  Leaderboard.tsx  LiveTransactions.tsx  MarathonLeaderboard.tsx  MarketTerminal.tsx  MatchHistory.tsx  MeshLeaderboard.tsx  MinerControl.tsx  MiningDashboard.tsx  MobilityTracker.tsx  NodeIdentity.tsx  PTCDashboard.tsx  PublicChat.tsx  RegionalHeatMap.tsx  SecurityScanner.tsx  (+3 more)
(+13 files in other folders)
