[package]
name = "haba-miner-client"
version = "0.1.0"
edition = "2021"

[dependencies]
# For high-speed hashing and security
sha2 = "0.10"
# For communicating with your Netlify/Neon backend
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
# For handling your UUID and JSON data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
# other dependencies...
